[package]
name = "skynet_api_monitor"
version = "0.4.7"
edition = "2021"
authors = ["MXWXZ <matrixwxz@gmail.com>"]
description = "API for Skynet monitor plugin."
license = "GPL-3.0"
repository = "https://github.com/MXWXZ/skynet"
keywords = ["framework", "api", "ffi", "plugin"]
categories = ["api-bindings", "external-ffi-bindings"]

[dependencies]
derivative = "2.2"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
enum-as-inner = "0.6"
ecies = { version = "0.2", default-features = false, features = [
    "std",
    "pure",
] }
prost = "0.13"
actix-cloud = "0.4"

skynet_api = { version = "0.2", features = ["skynet"] }
skynet_macro = "0.2"

[build-dependencies]
prost-build = "0.13"
walkdir = "2.5"

[workspace]
